--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,3 +1,9 @@
-<div class="card-header">
+<div class="card-header" [ngStyle]="style">
     {{ title }}
+
+    <div [ngSwitch]="categoria">
+        <p *ngSwitchCase="'E'">ELECTRONICO</p>
+        <p *ngSwitchCase="'A'">ABARROTES</p>
+    </div>
+
 </div>
