output pipe y servicios

--- a/src/app/pages/articulos/articulos.component.html
+++ b/src/app/pages/articulos/articulos.component.html
@@ -2,6 +2,6 @@
 
     <!--{{ lista | json }} -->
     <div class="row">
-        <app-card *ngFor="let item of lista" [articulo]="item"></app-card>
+        <app-card *ngFor="let item of lista" [articulo]="item" (onQuitar)="quitar($event)"> </app-card>
     </div>
 </div>
